# PE-Hackathon-Template-2026

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  test_crash.py  test_results.txt
.github/workflows/: ci.yml
Test_Functions/: README.md  conftest.py  test_url_creation.py  test_user_creation.py
alertmanager/: alertmanager.yml  discord.tmpl  init-alerts-db.sql  webhook-adapter.py
app/: __init__.py  analytics.py  app.py  cache.py  database.py  logging_config.py  observability.py  ui_app.py  validation.py
app/models/: event.py  url.py  user.py
app/routes/: __init__.py  events.py  seed.py  stats.py  url_redirect.py  urls.py  users.py
app/ui/: dashboard.py  helpers.py  sidebar.py  styles.py
docs/: CAPACITY.md  DECISIONS.md  DEPLOY.md  ERROR_HANDLING.md  FAILURE_MODES.md  FEATURES.md  INCIDENT_POSTMORTEM.md  LOAD_AND_CHAOS.md  TROUBLESHOOTING.md
docs/runbooks/: HIGH_ERROR_RATE.md  HIGH_LATENCY.md  HIGH_MEMORY_USAGE.md  README.md  SERVICE_DOWN.md  TEMPLATE.md
k6/: README.md  cleanup.sql  url-lifecycle.js  url-resolve.js  user-and-url.js  user-signup.js
locust/: locustfile.py
nginx/: nginx.conf
prometheus/: alerts.yml  prometheus.yml
scripts/: chaos.sh  demo-break-system.sh  demo_break_system.sh  deploy.sh  provision.sh  setup-vm.sh  teardown.sh
tests/: README.md  conftest.py  test_analytics.py  test_events.py  test_health.py  test_seed_stats.py  test_url_creation.py  test_url_delete.py  test_url_update.py  test_urls.py  test_user_creation.py  test_users.py
(+13 files in other folders)
